	- Removed EACCESS (probably due to log_msg), error on close
	  xfrd pipe is small, main process closes its end, and hopes for 
	  the best).
	- review: return on error condition in xfrd_tcp_open fixed.
	- review: expired when time >= expire_time, so it will not wait
	  for the retry after expire until it will detect the expiredness.
	- removed duplicate lines from xfrd_handle_zone_timeout.

3 Apr 2006: Wouter
	- Added buffer length check to internal ipc.
	- split out packet_read_query_section from the process_query_section
	  routine (and moved to packet.c/h).
	- xfrd reads passed packet via ipc.
	- ported over fix to 2_2 on missing rr types by removing the 
	  duplicate RRtype array, and using rrtype_to_string.
	- xfrd handles notifies. immediately starts updating.
	- xfrd state file format fix.
	- removed libwrap stuff - superseded by acls.
	  use provide-xfr: statements for your zone in the config file.
	  updated README for this.
	- updated tpkg tests for axfr to use provide-xfr: 127.0.0.1 NOKEY
	- review: move var create to start of function (xfrd_init()).

31 Mar 2006: Wouter
	- zone type has a pointer to zone options.
	- nsd options has an rbtree to find zone options in.
	- nsd checks acl for incoming notifies and replies
	  error or confirmation.
	- nicer layout in options.c.
	- updated makefile dependencies.
	- fixed sz for SOA_INFO ipc, which was too small.
	- notify is sent to server_main, server_main sends it to xfrd.

30 Mar 2006: Wouter
	- include: documented in manual page.
	- MAXINCLUDES define in one place (config.h).
	- configure checks for strptime in include files.
	- use %d instead of %zd (sparc5 machine does not get zd).
	- use region_strdup in configlexer.
	- added a check for EINVAL in dispatch - will abort
	  on the error instead of busy hang.

29 Mar 2006: Wouter
	- \r for config lexer. (similar changes to zonelexer).
	- forward port of fix to 2_2 branch:
	  short int in var_arg is promoted to int, according to B. Laurie.